<resources>
    <string name="app_name">Campus Spotlight</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="APP">This is where the app would be. IF I HAD ONE~</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="signUp">Sign Up!</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_password_repeat">Password (Repeat)</string>
    <string name="button_cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="student_life">Student-Life</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>


    <string name="csp_logo">CSL Logo</string>
    <string name="white_box">White Box</string>
    <string name="headline">Campus SpotLight</string>
    <string name="title_profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="bookmark_going">Bookmark Going</string>
    <string name="dateTime">Date and Time</string>
    <string name="eventTitle">Title</string>
    <string name="category">Category</string>
    <string name="profilePanel">Profile Panel</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="profileName">Users Name</string>
    <string name="profileEmail">Profile Email</string>
    <string name="editProfile">Edit Profile</string>
    <string name="fadedLogo">Faded Logo</string>
    <string name="profileEvents">My Events</string>
    <string name="profileTitlePanel">Profile Panel</string>
    <string name="signOutButton">Sign Out</string>
    <string name="profileHeadline">Profile</string>
    <string name="topPanel">topPanel</string>
    <string name="middlePanel">middlePanel</string>
    <string name="cost">Cost</string>
    <string name="location">Event Location</string>
    <string name="calendarPic">calendarPic</string>
    <string name="dollarSign">dollarSign</string>
    <string name="date_time">Date/time</string>
    <string name="spinnerTitle">Sort by Tag</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="submit">Submit</string>
    <string name="background">background</string>
    <string name="add_event">Add Event</string>
    <string name="create_event">Create Event</string>
</resources>

