<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">


    <ImageView
        android:id="@+id/profilePanel"
        android:layout_width="413dp"
        android:layout_height="719dp"
        android:contentDescription="@string/profilePanel"
        android:src="@color/primary_material_light_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopPanel" />

    <ImageView
        android:id="@+id/TopPanel"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:contentDescription="@string/topPanel"
        android:src="@color/uncGold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="326dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/norwester"
        android:text="@string/profileName"
        android:textAlignment="center"
        android:textColor="@color/browser_actions_bg_grey"
        android:textSize="30sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profilePanel" />

    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/profileEmail"
        android:textAlignment="center"
        android:textColor="@color/browser_actions_bg_grey"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileName" />

    <ImageButton
        android:id="@+id/editProfile"
        android:layout_width="76dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:alpha="0.70"
        android:background="@color/fui_transparent"
        android:contentDescription="@string/editProfile"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher_neweditbutton_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signOutButton" />

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="178dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/uncGold"
        android:contentDescription="@string/signOutButton"
        android:fontFamily="@font/norwester"
        android:text="@string/signOutButton"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEmail" />

    <Button
        android:id="@+id/addEventButton"
        android:layout_width="261dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:background="@color/uncGold"
        android:contentDescription="@string/add_event"
        android:fontFamily="@font/norwester"
        android:text="@string/create_event"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfile" />

    <TextView
        android:id="@+id/profileHeadline"
        android:layout_width="162dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/norwester"
        android:text="@string/profileHeadline"
        android:textAlignment="center"
        android:textColor="@color/browser_actions_bg_grey"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/TopPanel"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TopPanel" />

</android.support.constraint.ConstraintLayout>

