<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:background="@color/browser_actions_bg_grey">

    <ImageView
        android:id="@+id/background"
        android:layout_width="395dp"
        android:layout_height="160dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/background"
        android:radius="360dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@color/colorPrimary" />

    <TextView
        android:id="@+id/date_time"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:text="@string/dateTime"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/calendarPic"
        app:layout_constraintTop_toBottomOf="@+id/eventTitle" />

    <TextView
        android:id="@+id/eventTitle"
        android:layout_width="259dp"
        android:layout_height="59dp"
        android:layout_marginStart="80dp"
        android:fontFamily="@font/norwester"
        android:text="@string/eventTitle"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventLocation" />

    <ImageButton
        android:id="@+id/GoingButton"
        android:layout_width="47dp"
        android:layout_height="46dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:background="#046A38"
        android:contentDescription="@string/bookmark_going"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/eventLocation"
        app:srcCompat="@drawable/ic_delete_gold_24dp" />

    <TextView
        android:id="@+id/eventLocation"
        android:layout_width="167dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:text="@string/location"
        android:textAlignment="center"
        android:textColor="@color/browser_actions_bg_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/GoingButton"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <ImageView
        android:id="@+id/calendarPic"
        android:layout_width="36dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/calendarPic"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/eventTitle"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

</android.support.constraint.ConstraintLayout>